--- a/code/style.css
+++ b/code/style.css
@@ -1,41 +1,39 @@
-  
+* {
+  box-sizing: border-box; 
+  margin: 0; 
+  padding: 0; 
+}
+
 body {
   font-family:Verdana, Geneva, Tahoma, sans-serif; 
-  margin; 0;
+  margin: 0;
   background: lightpink;
   color:rgb(213, 226, 231);
-}
-
-@media (max-width: 667px)
-.grid-parent {
-grid-template-columns: 1fr; 
-gap: 15px; 
-max-width: 90%;
-
-}
-
-@media (min-width: 667px) and (max-width:1024px) {
- .grid-parent {
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 15px; 
-
-  }
-
+  width: 100vw;
+  height: 100vh; 
 }
 
 @media (min-width: 1024px) {
 .grid-parent {
-    grid-template-columns: repeat(4, 1fr); 
+    grid-template-columns: span 4;
     gap: 15px; 
-    padding-inline: ;
+    padding-inline:0 ;
+  }
+}
 
+@media screen (min-width: 667px) and (max-width:1024px) {
+  .grid-parent {
+    width: 100%;
+    grid-template-columns:repeat (auto-fill, minmax (30%, 2fr)); 
   }
 }
 
 .grid-parent {
   display: grid; 
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
+  grid-template-columns: repeat (auto fill, minmax (320px, 1fr));
+  justify-items: center; 
+  align-items: start;
+  grid-gap: 3em 3em; 
 
 }
 
@@ -57,10 +55,9 @@ max-width: 90%;
 
 .header-flex-parent {
   display:flex; 
-  flex-direction: row;
+  flex-direction: column;
   color: purple; 
   background-color: rgb(229, 215, 217); 
-  padding: .5em 1em; 
 }
   .header::after {
     content: ""; 
@@ -82,84 +79,168 @@ max-width: 90%;
     margin: 0 10px 0 0; 
     }
   
-    .nav-bar {
-      padding: 0;       
-      display: flex;
-      align-items: flex-end;
-      margin: 6.4em 0em 0em 21em;
+    @media screen and (max-width: 667px) {
+      .nav-bar a {
+        float:none; 
+        width: 100%;
+      }
       
     }
 
+    @media screen and (min-width: 667px) {
+      .nav-bar a {
+        float:none; 
+        width: 100%;
+      }
+      
+    }
 
- a {
-  margin: 10px; 
-  text-decoration: none; 
-  color: purple; 
+    @media screen and (min-width:1025px;) {
+      .menu {
+        display:flex; 
+        flex-wrap: wrap; 
+        justify-content: space-between; 
+        align-items: center;
+
+      }
+    }
+
+    @media (min-width: 1025px) {
+      .toggle {
+        display:none; 
+      }
+    }
+    
+    .menu {
+      display: flex; 
+      flex-wrap: wrap; 
+      justify-content: space-between; 
+      align-items: center; 
+    }
+
+    .nav-bar {
+      overflow: hidden;
+      display:flex; 
+    }
+
+
+    .nav-bar a {
+      float:inline-end;
+      display:block; 
+      text-decoration: none; 
+      color: purple; 
+      text-align: center;
+      padding: 14px 16px;
+    }
+
+    .nav-bar a:hover {
+      background-color: aliceblue;
+      color:blue
+    }
+
+    .bars {
+      display:inline-block; 
+      height: 2px; 
+      background: pink; 
+      width: 15px; 
+      position: relative; 
+    }
+
+    .bars::before {
+      top:5px;
+    }
+
+    .bars::after {
+      top:-5px; 
+    }
+      
+
+.big-news {
+  width: 90%;
+  border: 1px solid black; 
+  margin: 20px; 
+  display: flex;
+  background: white; 
+  flex-direction:column; 
+  align-self: center;
+ 
+}
+@media screen and (min-width: 667px) {
+  .big-news {
+    flex-direction: row; 
   }
+}
 
- }
-
-
- .big-news img {
-  width: 400px;
-  margin: 25px; 
+.big-news img {
+  width: 100%;
+  object-fit: cover;
 
 }
  
-
-.big-news {
-  margin: 40px; 
-  padding: 30px; 
-  background-color: ivory;
-  color: black; 
-  display: grid;
-  justify-content: center; 
-  grid-template-columns: span 4; 
-  align-items:stretch; 
-}
-
 .big-news h2 {
-  font-size: 40px; 
-  text-align:center; 
+  font-size: 30px; 
+  text-align:initial;
+  color: black; 
 
 }
 
+.big-news p {
+  margin: 10px; 
+  font-size: medium;
+}
 
+@media screen and (min-width: 667px){
+.flex-child {
+flex-direction: row; 
+flex-wrap: wrap; 
+  }
+}
 .other-news-parent {
-  display: grid; 
-  grid-template-columns: 1fr
-  grid-template-rows:1fr;
-  width: auto;
-  column-gap: 10px;
-  row-gap: 15px; 
-
-}
-
-.other-news {
+  display: flex; 
+  flex-direction: column;  
+  flex-wrap:wrap;
+  width: 90%; 
   margin: 20px;
-  background: rgb(213, 226, 231);
-  font-size: 20px; 
-  display: grid; 
-  padding: 20px; 
   color: black;
-  justify-content: space-around;
-
+  text-align: center;
+  padding: 10px 20px; 
+  align-content:center; 
+}
 
  p {
   font-weight: 500;
   color: black; 
   font-family:Verdana, Geneva, Tahoma, sans-serif
-  display:block; 
  }
 
-.grid-item img {
+.flex-child img {
   width: 100%; 
-  height: 40%;
-  aspect-ratio: 1/2;
   object-fit: cover; 
+}
+
+.flex-child h3 {
+  font-size: 20px;
+  text-align: initial; 
+  margin: 20px; 
+}
+
+.flex-child {
+  display: flex;
+  border: 1px solid black; 
+  margin: 20px; 
+  flex-direction:column; 
+  align-items: center;
+  background: white;
+  width: 100%; 
+  box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 25px;
 
 }
 
-.other-news h3 {
-  font-size: 40px;
+img {
+  justify-content: center;
+}
+
+ul {
+  list-style-type: none; 
 }
