--- a/code/style.css
+++ b/code/style.css
@@ -46,6 +46,11 @@ align-items: center;
     font-family: 'Helvetica', 'Arial', sans-serif;
 
 }
+
+.burger {
+    display: none;
+
+}
 /*End of header*/
 
 /*Big news section*/
