--- a/code/style.css
+++ b/code/style.css
@@ -4,37 +4,109 @@ body {
 .header1 {
   display: flex;
   width: 1024px;
-  border: 1px solid black;
   justify-content: space-between;
   align-items: flex-end;
   flex-direction: row;
   }
 .logotype {
   max-width: 400px;
-  border: 1px solid black;
+  margin-bottom: -16px;
 }
 .navbar {
-  width: 600px;
+  width: 620px;
   height: 40px;
   background-color: rgba(239,199,29,0.6);
-  border: 1px solid black;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  border-radius: 5px 15px;
 }
  ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
-}
+  display: flex;
+ }
 a {
   text-decoration: none;
-  color: darkslategray;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  color: #181404;
+  font-family: helvetica, sans-serif;
+  font-variant: small-caps;
   font-size: 18px;
-  background-color: rgba(239,199,29,0.9);
-  width: 60px;
-  height: 40px;
+  padding: 10px;
+  padding-right: 18px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+a:hover {
+  display: inline-block;
+  background-color: rgba(239,199,29,0.3);
+  border-radius: 5px 15px;
+}
+.main {
+  background-color: rgba(239,199,29,0.1);
+  max-width: 1024px;
+  margin-top: 20px;
 }
 .panorama {
-  max-width: 1024px;
-  margin-top: 50px;
+  max-width: 1004px;
+  margin-top: 12px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  border: 0.5px solid rgba(239,199,29,0.3);
+}
+h1 {
+ color: #181404;
+ font-family: garamond, serif;
+ font-size: 48px;
+ margin-left: 20px;
+ margin-top: 10px;
+ margin-bottom: -10px;
+}
+p {
+  color: #181404;
+  font-family: Helvetica, sans-serif;
+  font-size: 16px;
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.squares {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.small-news {
+  display: grid;
+  width: auto;
+  height: 260px;
+  margin-left: 10px;
   margin-bottom: 30px;
+  margin-right: 10px;
+  background-color: #fbf3d3;
+  border-radius: 5px 15px;
+  justify-content: space-evenly;
+}
+h2 {
+  display: grid;
+  font-family: Helvetica, sans-serif;
+  justify-content: flex-start;
+  font-variant: small-caps;
+  margin-top: 10px;
+  margin-bottom: 0px;
+}
+footer {
+  background-color:  #fbf3d3;
+  border-radius: 15px 5px;
+  height: 50px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.logo {
+  height: 40px;
+  margin-left: 10px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
