--- a/code/style.css
+++ b/code/style.css
@@ -8,13 +8,12 @@ body {
   font-family:Verdana, Geneva, Tahoma, sans-serif; 
   margin: 0;
   background: lightpink;
-  color:rgb(213, 226, 231);
+  
 }
 
 
 .grid-parent {
   display: grid; 
-  grid-template-columns: repeat (auto fill, minmax (320px, 1fr));
   justify-items: center; 
   align-items: start;
   grid-gap: 3em 3em; 
@@ -25,6 +24,7 @@ body {
       grid-template-columns: span 4;
       gap: 15px; 
       padding-inline:0 ;
+      
     }
   }
   
@@ -98,7 +98,8 @@ input[type=checkbox]{
 .menu {
     display:flex; 
     gap: 1em;
-    font-size:18px;  
+    font-size:18px; 
+    align-self:flex-end;  
     }
 
     @media screen and (max-width:667px) {
@@ -149,8 +150,8 @@ input[type=checkbox]{
         display:flex; 
         justify-content:space-between; 
         padding: 20px; 
-        background-color:pink; 
-        color:rgb(213, 226, 231);
+        background-color:rgb(229, 215, 217); 
+        color: hotpink; 
       }
   
       .nav-bar a {
@@ -187,6 +188,7 @@ input[type=checkbox]{
   font-size: 30px; 
   text-align:initial;
   color: black; 
+  margin-top: 20px;
 
 }
 
@@ -199,6 +201,7 @@ input[type=checkbox]{
   .big-news {
     flex-direction: row; 
     object-fit: cover;
+
     }
 }
 
@@ -208,26 +211,52 @@ input[type=checkbox]{
   }
 }
 
+@media screen and (min-width: 1024px) {
+.big-news img {
+ width:700px;
+ height: 100%;
+}
+}
+
+@media screen and (min-width:668px) and (max-width:1024px) {
+  .big-news img {
+    width:450px; 
+    height: 100%; 
+    overflow:hidden; 
+  }
+}
+
 
 .other-news-parent {
   display: flex; 
   flex-direction: column;  
   flex-wrap:wrap;
-  width: 90%; 
-  margin: 20px;
+  flex-basis: 1400px; 
+  margin: 20px 20px;
   color: black;
   text-align: center;
   padding: 10px 20px; 
   align-content:center; 
+  justify-content:flex-start;
 }
 
-@media screen and (min-width: 667px){
+@media screen and (min-width: 667px) and (max-width: 1024px){
   .other-news-parent {
   flex-direction: row; 
   flex-wrap: wrap; 
-  width: 100%; 
+  flex-basis: 45%; 
     }
   }
+
+  @media screen and (min-width: 1024px) {
+    .other-news-parent {
+    flex-basis: 22.5%; 
+    flex-direction: row;
+    flex-wrap: wrap; 
+  }
+  }
+    
+  
 
  p {
   font-weight: 500;
@@ -236,28 +265,49 @@ input[type=checkbox]{
  }
 
 .flex-child img {
-  width: 100%; 
+  width: 100%;
+  height: 300px;
+  overflow: hidden; 
   object-fit: cover; 
 }
 
+.flex-child two img {
+  width:100%; 
+  height:100%;
+  object-fit: cover;
+
+}
+
 .flex-child h3 {
-  font-size: 20px;
   text-align: initial; 
   margin: 20px; 
 }
 
 .flex-child {
   display: flex;
+  flex: 100%;
   border: 1px solid black; 
-  margin: 20px; 
+  margin: 20px auto; 
   flex-direction:column; 
-  align-items: center;
   background: white;
-  width: 100%; 
+  width: 90%; 
   box-shadow:0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
+  box-sizing: border-box;
 
 }
+@media screen and (min-width: 680px) and (max-width: 1023px) {
+.flex-child {
+    margin: 1rem;
+    flex: 0 1 45%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .flex-child {
+      flex: 0 1 21%;
+    }
+  }
 
 img {
   justify-content: center;
