Fix responsivity for mobile on News & Reviews

--- a/code/style.css
+++ b/code/style.css
@@ -175,7 +175,11 @@ a:hover {
 }
 
 .video-big-news-two-figcaption {
-  text-align: left;
+  text-align: center;
+}
+
+.video-big-news-two-figcaption a {
+  text-decoration: underline;
 }
 
 .other-news h4 {
