--- a/code/style.css
+++ b/code/style.css
@@ -20,6 +20,7 @@ h1 {
   font-family: var(--logo-name-font-family);
   font-size: 48px;
   font-weight: normal;
+  text-align: center;
 }
 
 h2,
@@ -392,8 +393,8 @@ a:hover {
 
 /*tablet*/
 @media ((min-width: 668px) and (max-width: 1023px)) {
-  .logo-magazine {
-    width: 100%;
+  .kwadrat .kwadrat2 {
+    display: none;
   }
 
   .border-container {
@@ -455,7 +456,7 @@ a:hover {
 /*mobile*/
 @media (max-width: 667px) {
   .logo-magazine {
-    width: 100%;
+    display: none;
   }
 
   .border-container {
