--- a/code/style.css
+++ b/code/style.css
@@ -227,7 +227,6 @@ a:hover {
   background: var(--primary-bg-color);
   box-shadow: var(--box-shadow);
   color: var(--primary-text-color);
-  width: 215px;
   text-decoration: underline;
   text-align: center;
 }
@@ -454,7 +453,11 @@ a:hover {
 }
 
 /*mobile*/
-@media (max-width: 667px) {
+@media (min-width: 375px) and (max-width: 667px) {
+  body {
+    margin: 0 auto;
+  }
+
   .logo-magazine {
     display: none;
   }
@@ -474,6 +477,41 @@ a:hover {
     display: grid;
     grid-template-columns: repeat(1, 2fr);
     gap: 10px;
+  }
+
+  .big-news-paragraph {
+    overflow-wrap: break-word;
+    margin: 30px 20px 30px 20px;
+  }
+
+  .other-news h3 {
+    text-align: center;
+    margin: 30px 0 30px 0;
+  }
+}
+
+/*Galaxy fold*/
+@media (min-width: 280px) and (max-width: 374px) {
+  .logo-magazine {
+    display: none;
+  }
+
+  .border-container {
+    width: 80%;
+    margin: 0 20px 0 20px;
+  }
+
+  .grid-parent-big-news {
+    display: grid;
+    grid-template-columns: repeat(1, 2fr);
+    gap: 10px;
+  }
+
+  .grid-parent-other-news {
+    display: grid;
+    grid-template-columns: repeat(1, 2fr);
+    gap: 10px;
+    margin: 0;
   }
 
   .big-news-paragraph {
